<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyContentGen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tech4mobile.cobanmovil.MainActivity" >
    
    <LinearLayout 
    android:id="@+id/continer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/lblTitleRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strlblRuta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnPend"
        style="android:buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnfondogreen"
        android:radius="15dp"
        android:text="@string/strbtnPend"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnfondoblue"
        android:text="@string/strbtnReali"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRecordar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strbtnRecordar" 
        android:layout_marginTop="20dp"
        android:background="@drawable/btnfondored"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <ImageView
            android:id="@+id/imgSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/strbtnSalir"
            android:src="@drawable/salir" />

    </LinearLayout>

</LinearLayout>
    

</ScrollView>