<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tech4mobile.cobanmovil.NoteActivity" >

    <TextView
        android:id="@+id/lblNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strlblNote"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.78" >

        <EditText
            android:id="@+id/txtNotas"
            android:layout_width="match_parent"
            android:layout_height="306dp"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:hint="@string/strLblNoteString"
            android:inputType="textMultiLine"
            android:labelFor="@+id/txtNotas"
            android:maxLines="300" >

            <requestFocus />
        </EditText>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnGrabarNota"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.95"
            android:background="@drawable/btnfondogreen"
            android:text="@string/strbtnGrabarNota"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnCancelarNota"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.95"
            android:background="@drawable/btnfondocorinto"
            android:text="@string/strbtnCancelarNota"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>