<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radialback_inner"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobilcoban.app.DetalleCobroActivity" >

    <LinearLayout
        android:id="@+id/lyContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.tech4mobile.cobanmovil.DetalleCobroActivity" >

        <LinearLayout
            android:id="@+id/lyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            tools:ignore="UseCompoundDrawables" >

            <TextView
                android:id="@+id/lblTitleAviso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/strlblCobro"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/imgMapa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/strMap"
                android:src="@drawable/mapa" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblTextContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblTextNegocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblTextDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblTextMontoAtraso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblTextCuotaDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblTextSaldoDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblTextSaldoTot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="8" >

            <Button
                android:id="@+id/btnPrint"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/btnfondogreen"
                android:drawableTop="@drawable/ic_pay"
                android:gravity="bottom|left|center_vertical|center_horizontal|center|clip_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/strbtnPrint"
                android:textColor="#000000"
                android:textSize="20sp"
                android:width="85dp" />

            <Button
                android:id="@+id/btnAviso"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/btnfondorange"
                android:drawableTop="@drawable/ic_message"
                android:gravity="bottom|left|center_vertical|center_horizontal|center|clip_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/strbtnAviso"
                android:textColor="#000000"
                android:textSize="20sp"
                android:width="85dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>